<resources>
    <string name="app_name">MyApp</string>
    <string name="bar_name_home">首页</string>
    <string name="bar_name_topic">专题</string>
    <string name="bar_name_sort">分类</string>
    <string name="bar_name_shop">购物车</string>
    <string name="bar_name_me">我的</string>

    <string name="title_hotgood_all">综合</string>
    <string name="title_hotgood_price">价格</string>
    <string name="title_hotgood_sort">分类</string>
    
    <string name="title_car_specs">请选择规格数量</string>
    <string name="title_car_assess">评价($)</string>
    <string name="title_car_lookall">查看全部</string>


    <string name="hint_login_username">请输入用户名</string>
    <string name="hint_login_pw">请输入密码</string>



    <string name="tips_error_goodid">错误的商品id</string>


    <string name="tips_login">请输入正确的用户名和密码</string>
    <string name="tips_buynumber">请选中购买商品数量</string>

</resources>