<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_shop">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/car_banner_height"/>
            <!--商品信息-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200">

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--数量选择区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_specs"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_20"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_rt"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="@dimen/dp_20"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="@color/gray_word"/>
            <!--商品评论区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_assess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_assess"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_car_lookall"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="@dimen/dp_20"
                    android:drawableRight="@mipmap/ic_arrow_rt"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_word"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_20"/>
            <!--评论内容-->

            <!--商品参数区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--商品详情区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"></WebView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--商品常见问题区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--大家都在看的商品区域-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_shop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView">
        <FrameLayout
            android:id="@+id/layout_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/layout_car">
            <ImageView
                android:id="@+id/img_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_collect_normal"
                android:layout_gravity="center"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/layout_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/layout_collect"
            app:layout_constraintRight_toLeftOf="@id/txt_buy">
            <ImageView
                android:id="@+id/img_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_car"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txt_number"
                android:layout_width="@dimen/sp_15"
                android:layout_height="@dimen/sp_15"
                android:layout_gravity="center"
                android:text="11"
                android:textSize="@dimen/sp_8"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:gravity="center"
                android:background="@drawable/shape_car_number"
                android:textColor="@color/white"
                android:visibility="gone"/>
        </FrameLayout>
        <TextView
            android:id="@+id/txt_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="立即购买"
            android:textSize="@dimen/sp_20"
            app:layout_constraintLeft_toRightOf="@id/layout_car"
            app:layout_constraintRight_toLeftOf="@id/txt_addCar"/>
        <TextView
            android:id="@+id/txt_addCar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="加入购物车"
            android:textSize="@dimen/sp_20"
            android:maxLines="1"
            android:textColor="@color/white"
            android:background="@color/red"
            app:layout_constraintLeft_toRightOf="@id/txt_buy"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>